translation-tool/inputs/source_meta/objects/Device__c.object
<CustomObject>
    <description>This object represents a device at a physical location and identified by SAN.</description>
    <fields>
        <fullName>Customer_Device_ID__c</fullName>
        <description>Customer provided name for the device at this physical location.</description>
        <inlineHelpText>Customer provided name for the device at this physical location.</inlineHelpText>
        <label>Customer Device ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWProduct_ID__c</fullName>
        <description>Hardware at this physical location.</description>
        <inlineHelpText>Hardware at this physical location.</inlineHelpText>
        <label>Hardware Product ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADSL DEDICATED</fullName>
                </value>
                <value>
                    <fullName>ADSL SHARED-VADB</fullName>
                </value>
                <value>
                    <fullName>ANTENNA-098</fullName>
                </value>
                <value>
                    <fullName>ANTI-ICE ANT-098</fullName>
                </value>
                <value>
                    <fullName>ANTI-ICE ANT-120</fullName>
                </value>
                <value>
                    <fullName>ATT 3G-250M-HN7700</fullName>
                </value>
                <value>
                    <fullName>ATT 3G-50M-HN7700</fullName>
                </value>
                <value>
                    <fullName>BEVMO CUTOVER</fullName>
                </value>
                <value>
                    <fullName>BWI-MEDIA-PLATINUM</fullName>
                </value>
                <value>
                    <fullName>C1811-CABLE</fullName>
                </value>
                <value>
                    <fullName>C1811-DSL</fullName>
                </value>
                <value>
                    <fullName>C1811-T1</fullName>
                </value>
                <value>
                    <fullName>C871W-DSL</fullName>
                </value>
                <value>
                    <fullName>C877-CABLE</fullName>
                </value>
                <value>
                    <fullName>C877-DSL</fullName>
                </value>
                <value>
                    <fullName>C877-T1</fullName>
                </value>
                <value>
                    <fullName>C877W-CABLE</fullName>
                </value>
                <value>
                    <fullName>C877W-DSL</fullName>
                </value>
                <value>
                    <fullName>C877W-NAP-MODEM</fullName>
                </value>
                <value>
                    <fullName>C891-APPLIANCE</fullName>
                </value>
                <value>
                    <fullName>C891-CABLE</fullName>
                </value>
                <value>
                    <fullName>C891-CUSTTRANS</fullName>
                </value>
                <value>
                    <fullName>C891-DSL</fullName>
                </value>
                <value>
                    <fullName>C891-NAP MODEM</fullName>
                </value>
                <value>
                    <fullName>CBR CABLE</fullName>
                </value>
                <value>
                    <fullName>CBR DSL</fullName>
                </value>
                <value>
                    <fullName>CISCO 2960 SWITCH</fullName>
                </value>
                <value>
                    <fullName>CISCO 300 SWITCH</fullName>
                </value>
                <value>
                    <fullName>CPT AUDIO CONNECT</fullName>
                </value>
                <value>
                    <fullName>CPT DIGITAL MEDIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_Product_ID__c</fullName>
        <label>HW Product ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN__c</fullName>
        <externalId>true</externalId>
        <label>SAN</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Existing Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Bonding</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Back Office Server</fullName>
                </value>
                <value>
                    <fullName>Broadband Remote</fullName>
                </value>
                <value>
                    <fullName>Cable L3</fullName>
                </value>
                <value>
                    <fullName>Cable L3 w/ POTS VADB</fullName>
                </value>
                <value>
                    <fullName>Customer Provided Transport</fullName>
                </value>
                <value>
                    <fullName>Cust Prov Transport w/ POTS VABD</fullName>
                </value>
                <value>
                    <fullName>DED Fiber L3 w/ POTS VADB</fullName>
                </value>
                <value>
                    <fullName>Dedicated ADSL L2</fullName>
                </value>
                <value>
                    <fullName>Dedicated ADSL L2 w POTS VADB</fullName>
                </value>
                <value>
                    <fullName>Dedicated ADSL L3</fullName>
                </value>
                <value>
                    <fullName>Dedicated ADSL L3 w POTS VADB</fullName>
                </value>
                <value>
                    <fullName>Dedicated Fiber L3</fullName>
                </value>
                <value>
                    <fullName>Dedicated Fiber L3 w/ POTS</fullName>
                </value>
                <value>
                    <fullName>Dedicated IDSL L2</fullName>
                </value>
                <value>
                    <fullName>Dedicated IDSL L3</fullName>
                </value>
                <value>
                    <fullName>Dedicated SDSL L2</fullName>
                </value>
                <value>
                    <fullName>Dedicated SDSL L3</fullName>
                </value>
                <value>
                    <fullName>Dedicated T1 L2</fullName>
                </value>
                <value>
                    <fullName>Dedicated T1 L3</fullName>
                </value>
                <value>
                    <fullName>Digital Media</fullName>
                </value>
                <value>
                    <fullName>Elearning</fullName>
                </value>
                <value>
                    <fullName>HN Cable L3</fullName>
                </value>
                <value>
                    <fullName>HN Cable L3 w/ POTS VADB</fullName>
                </value>
                <value>
                    <fullName>HN Customer Provided Transport</fullName>
                </value>
                <value>
                    <fullName>HN Cust Prov Transport w/ POTS VABD</fullName>
                </value>
                <value>
                    <fullName>HN DED Fiber L3 w/ POTS VADB</fullName>
                </value>
                <value>
                    <fullName>HN Dedicated ADSL L2</fullName>
                </value>
                <value>
                    <fullName>HN Dedicated ADSL L2 POTS/VADB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upsert_Msg__c</fullName>
        <label>Upsert Msg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SAN__c</columns>
        <columns>Customer_Device_ID__c</columns>
        <columns>HWProduct_ID__c</columns>
        <columns>Service_Level__c</columns>
        <columns>Site_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HWProduct_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DVC-{00000000}</displayFormat>
        <label>Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>